--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
 autopep8==1.7.0
+cramjam==2.5.0
+fastparquet==0.8.3
+fsspec==2022.8.2
+numpy==1.23.2
+packaging==21.3
+pandas==1.4.4
+pyarrow==9.0.0
 pycodestyle==2.9.1
+pyparsing==3.0.9
 pysimdjson==5.0.1
+python-dateutil==2.8.2
+pytz==2022.2.1
+six==1.16.0
 toml==0.10.2
