--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,40 @@
 autopep8==1.7.0
+click==8.1.3
+cloudpickle==2.2.0
+colorama==0.4.5
 cramjam==2.5.0
+dask==2022.1.1
+distlib==0.3.6
+distributed==2022.1.1
 et-xmlfile==1.1.0
 fastparquet==0.8.3
+filelock==3.8.0
 fsspec==2022.8.2
+HeapDict==1.0.1
+Jinja2==3.1.2
+locket==1.0.0
+MarkupSafe==2.1.1
+modin==0.15.3
+msgpack==1.0.4
 numpy==1.23.2
 openpyxl==3.0.10
 packaging==21.3
 pandas==1.4.4
+partd==1.3.0
+platformdirs==2.5.2
+psutil==5.9.2
 pyarrow==9.0.0
 pycodestyle==2.9.1
 pyparsing==3.0.9
 pysimdjson==5.0.1
 python-dateutil==2.8.2
 pytz==2022.2.1
+PyYAML==6.0
 six==1.16.0
+sortedcontainers==2.4.0
+tblib==1.7.0
 toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+virtualenv==20.16.5
+zict==2.2.0
